--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ data-service/tests/config/config.yaml
 data-service/config/config.yaml
 interface-service/config/config.yaml
 bot/config/config.yaml
+
+kafka_data
