--- a/data-service/docker-compose.yaml
+++ b/data-service/docker-compose.yaml
@@ -10,3 +10,8 @@ services:
     ports:
       - 5432:5432
     restart: always
+  redis:
+    image: redis
+    container_name: 'redis'
+    ports:
+      - 6379:6379
